# django-commoncontent

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  manage.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: release.yml  test.yml
genericsite/: admin.py  apps.py  models.py  schemas.py  test_schemas.py  views.py
genericsite/migrations/: 0001_initial.py  0002_alter_article_base_template_and_more.py
genericsite/templates/genericsite/: base.html
genericsite/templates/genericsite/blocks/: article_list_blog.html  article_text.html  footer_simple.html
genericsite/templates/registration/: logged_out.html  password_change_form.html  password_reset_confirm.html  password_reset_form.html
genericsite/templatetags/: genericsite.py
mockups/: SiteManager.html
src/commoncontent/: admin.py  apps.py  common.py  models.py  redirects.py  schemas.py  sitemaps.py  urls.py  views.py  views_optional.py
src/commoncontent/adminoverride/: admin.py
src/commoncontent/management/commands/: import_markdown.py
src/commoncontent/migrations/: 0001_initial.py  0002_sectionimage_sectionhtml.py
src/commoncontent/static/: generic.css
src/commoncontent/templates/commoncontent/: article_detail.html  base.html
src/commoncontent/templates/commoncontent/blocks/: article_list_album.html  article_list_blog.html  article_text.html  author_list_album.html  author_profile.html  debug_newsite.html  footer_simple.html  header_simple.html
src/commoncontent/templates/commoncontent/includes/: article_series.html  pagination.html
src/commoncontent/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
src/commoncontent/templatetags/: commoncontent.py
src/genericsite/: admin.py  apps.py  common.py  models.py  redirects.py  schemas.py  search.py  sitemaps.py  urls.py  views.py  views_optional.py
src/genericsite/adminoverride/: admin.py
src/genericsite/management/commands/: import_markdown.py
src/genericsite/migrations/: 0001_initial.py  0002_attachment_site_image_site_and_more.py  0003_attachment_alt_text_alter_attachment_title_and_more.py  0004_alter_article_base_template_and_more.py  0005_alter_sitevar_options.py  0006_alter_menu_slug.py  0007_alter_article_options_alter_homepage_options_and_more.py  0008_author_slug_alter_article_date_modified_and_more.py  0009_author_date_modified.py  0010_alter_attachment_file_alter_image_image_file.py  0011_alter_article_options_articleseries_article_series_and_more.py
src/genericsite/static/: generic.css
src/genericsite/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
src/genericsite/templates/account/snippets/: already_logged_in.html
src/genericsite/templates/genericsite/: article_detail.html  base.html
src/genericsite/templates/genericsite/blocks/: article_featuredimage.html  article_list_album.html  article_list_blog.html  article_text.html  author_list_album.html  author_profile.html  debug_newsite.html  footer_simple.html  header_simple.html
src/genericsite/templates/genericsite/includes/: article_series.html  link_list.html  messages.html  pagination.html
src/genericsite/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html
src/genericsite/templatetags/: genericsite.py
test_project/: asgi.py  settings.py  urls.py  wsgi.py
test_project/static/css/: mindvessel.css
tests/: test_admin.py  test_import_markdown.py  test_import_markdown_no_frontmatter.md  test_import_markdown_with_frontmatter.md  test_models.py  test_schemas.py  test_smoke.py  test_templates.py  test_templatetags.py  test_views.py
