[project]
name = "django-genericsite"
dynamic = ["version"]
authors = [{ name = "Vince Veselosky", email = "vince@veselosky.com" }]
description = "basic templates for Django's generic views to produce a decent-looking website with minimal effort"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django-bootstrap-icons>=0.7.8",
    "django-imagekit>=5.0.0",
    "django-taggit>=5.0.0",
    "django<5.3,>=4.2",
    "docutils>=0.19",
    "pillow>=2.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "django-allauth>=0.51.0",
    "django-debug-toolbar",
    "django-environ",
    "django-extensions",
    "djlint",
    "pytest",
    "pytest-cov",
    "pytest-django",
]

[project.urls]
Homepage = "https://github.com/veselosky/django-genericsite"
"Bug Tracker" = "https://github.com/veselosky/django-genericsite/issues"

[build-system]
# With setuptools-scm, package data files (e.g. templates) that are tracked by git will
# be automatically detected and included. Without setuptools-scm, you would need to
# specify a file pattern in MANIFEST.in to collect them.
requires = ["setuptools>=66.1.1", "setuptools-scm>=7.0.5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.version]
attr = "genericsite.__version__"
