[project]
name = "django-commoncontent"
dynamic = ["version"]
authors = [{ name = "Vince Veselosky", email = "vince@control-escape.com" }]
description = "basic data model and templates for Django's generic views to produce a decent-looking website with minimal effort"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django-bootstrap-icons>=0.7.8",
    "django-imagekit>=5.0.0",
    "django-sitevars>=1.0.2",
    "django-taggit>=5.0.0",
    "django<5.3,>=4.2",
    "pillow>=10.1.0",
    "pygments>=2.18.0",
    "python-dateutil>=2.8.1",
    "pyyaml>=6.0.1",
    "mistletoe>=1.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4.6",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-tinymce>=4.1.0",
    "djlint>=1.34.1",
    "docutils>=0.20.1",
    "pre-commit>=3.5.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/veselosky/django-commoncontent"
"Bug Tracker" = "https://github.com/veselosky/django-commoncontent/issues"

[build-system]
# With setuptools-scm, package data files (e.g. templates) that are tracked by git will
# be automatically detected and included. Without setuptools-scm, you would need to
# specify a file pattern in MANIFEST.in to collect them.
requires = ["setuptools>=66.1.1", "setuptools-scm>=7.0.5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.version]
attr = "commoncontent.__version__"

[tool.djlint]
close_void_tags = true
format_css = true
format_js = true
indent = 2
max_line_length = 119
profile = "django"
# https://www.djlint.com/docs/linter/#rules
# D018 (Django) Internal links should use the {% url ... %} pattern.
# H017 Void tags should be self closing.
# H023 Do not use entity references.
# H031 Consider adding meta keywords.
# H035 Meta tags should be self closing.
# T001 Variables should be wrapped in whitespace. Ex: {{ this }}
# T002 Double quotes should be used in tags.
ignore = "D018,H023,H031,T002"
include = "H017,H035"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "DJ"]
ignore = ["E501", "W505"]

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar>=4.4.6",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-tinymce>=4.1.0",
    "djlint>=1.34.1",
    "docutils>=0.20.1",
    "pre-commit>=3.5.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.8.0",
]

[tool.uv.sources]
# django-sitevars = { path = "../django-sitevars", editable = true }
